--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -16,7 +16,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
+        <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
         <title>Pagamento</title>
     </head>
@@ -25,7 +25,10 @@
             <a href="../../index.html">
                 <img src="../../images-global/logo-branca.svg" alt="logo" />
             </a>
-            <nav>
+            <nav class="navegacao">
+                <input type="checkbox" class="toggle-menu">
+                <div class="hamburguer"></div>
+
                 <ul class="nav_links">
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Produto</a></li>
