convertendo data para o formato do banco

--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -48,7 +48,7 @@
           </button>
         </div>
         <div class="col-md-3 primeiro_botao">
-          <button id="primeiro_botao" type="submit">
+          <button id="primeiro_botao">
             <a href="./editar/index.html">EDITAR</a>
           </button>
         </div>
