Integração - Editar Cartão da Instituição (sem Validação)

--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container mt-5 container">
         <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
-        <form onsubmit="editarInstituicao()" class="row g-3">
+        <form onsubmit="validacao()" class="row g-3">
 
           <div class="col-md-12" id="icon">
             <label for="numero_do_cartao" class="form-label">Número do cartão</label>
