--- a/home/index.html
+++ b/home/index.html
@@ -16,8 +16,8 @@
     <header></header>
     <main>
         <div class="container">
-            <h1>LOREM IMPSUM DOLOR SIT AMET</h1>
-            <h2>Lorem ipsum dolor sit amet. Eos veniam rerum aut dolorem.</h2>
+            <h1>NEXUS TCC</h1>
+            <h2>A solução que você procurava para a organização do seu projeto.</h2>
             <div class="botao"> <p>SAIBA MAIS</p> </div>
         </div>
     </main>
