--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -71,13 +71,12 @@
 
     <div>
       <label for="senha-label" class="form-label">Insira sua senha para confirmar a ação:</label>
-      <input type="password" id="senhaInstituicao" class="form-control senha-label">
-      <p id="p-senha-incorreta">Senha Incorreta</p>
+      <input type="password" class="form-control senha-label">
     </div>
 
     <div class="buttons">
       <button class="col-md-3" id="primeiro_botao_modal" onclick="exitModal()">CANCELAR</button>
-      <button class="col-md-3" id="segundo_botao_modal" onclick="excluirConta()">CONFIRMAR</button>
+      <button class="col-md-3" id="segundo_botao_modal" onclick="exitModal()">CONFIRMAR</button>
     </div>
 
   </div>
