--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
-  <script defer src="./script.js"></script>
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
   <title>INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
@@ -21,39 +19,38 @@
   <div class="container mt-5 container">
     <h1>INFORMAÇÕES DE PAGAMENTO</h1>
     <form class="row g-3">
+
       <div class="col-md-12">
         <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-        <input id="input_numero_do_cartao" type="text" class="form-control numero_do_cartao" disabled />
+        <input type="text" class="form-control numero_do_cartao">
       </div>
 
       <div class="col-md-12">
         <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-        <input id="input_nome_no_cartao" type="text" class="form-control nome_no_cartao" disabled />
+        <input type="text" class="form-control nome_no_cartao">
       </div>
 
       <div class="col-md-6 for-cnp">
         <label for="validade" class="form-label">Validade</label>
-        <input id="input_validade" type="text" class="form-control validade" disabled />
+        <input type="text" class="form-control validade">
       </div>
 
       <div class="col-md-6">
         <label for="cvv" class="form-label">CVV</label>
-        <input id="input_cvv" type="text" class="form-control cvv" disabled />
+        <input type="text" class="form-control cvv">
       </div>
 
       <div class="buttons">
-        <div class="col-md-3 primeiro_botao">
-          <button id="segundo_botao" type="submit">
-            <a href="../../../instituicao/index.html">CANCELAR</a>
-          </button>
+        <div class="col-md-3 primeiro_botao"> 
+          <button id="segundo_botao" type="submit"><a href="../../../instituicao/index.html">CANCELAR</a></button>
         </div>
         <div class="col-md-3 primeiro_botao">
-          <button id="primeiro_botao">
-            <a href="./editar/index.html">EDITAR</a>
-          </button>
+         <button id="primeiro_botao" type="submit"> <a href="./editar/index.html">EDITAR</a></button>
         </div>
       </div>
+
     </form>
+
   </div>
 </body>
 
