--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -17,14 +17,11 @@
         <a href="#">
             <img src="../images-global/logo-branca.svg" alt="logo" />
         </a>
-        <nav class="navegacao">
-            <input type="checkbox" class="toggle-menu">
-            <div class="hamburguer"></div>
-
+        <nav>
             <ul class="nav_links">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Produto</a></li>
-                <li><a href="./index.html">Planos & Preços</a></li>
+                <li><a href="index.html">Planos & Preços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
