--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../../componentes/header/styles_header.css"/>
         <link rel="stylesheet" href="../../componentes/footer/styles_footer.css">
         <link rel="stylesheet" href="pagamento.css" />
-        <script src="form.js" defer></script>
+        <script src="scripts.js" defer></script>
 
         <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
@@ -16,7 +16,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
+ <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
         <title>Pagamento</title>
     </head>
@@ -25,10 +25,7 @@
             <a href="../../index.html">
                 <img src="../../images-global/logo-branca.svg" alt="logo" />
             </a>
-            <nav class="navegacao">
-                <input type="checkbox" class="toggle-menu">
-                <div class="hamburguer"></div>
-
+            <nav>
                 <ul class="nav_links">
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Produto</a></li>
@@ -80,7 +77,7 @@
                         <div class="input_instituicao sucesso">
                             <label for="inputNomeInstituicao">Nome da Instituição</label>
                             <div class="input_dados_instituicao">
-                                <input id="inputNomeInstituicao" name="inputNomeInstituicao" type="text" placeholder="Nome da Instituição" maxlength="255"/>
+                                <input id="inputNomeInstituicao" name="inputNomeInstituicao" type="text" placeholder="Nome da Instituição"/>
                                 <p><small>Error mesage</small></p>
                             </div>
                         </div>
@@ -88,7 +85,7 @@
                         <div class="input_instituicao erro">
                             <label for="inputEmailInstituicao">E-mail Institucional</label>
                             <div class="input_dados_instituicao">
-                                <input id="inputEmailInstituicao" name="inputEmailInstituicao" type="email" placeholder="E-mail Institucional" maxlength="255"/>
+                                <input id="inputEmailInstituicao" name="inputEmailInstituicao" type="email" placeholder="E-mail Institucional"/>
                                 <p><small>Error mesage</small></p>
                             </div>
                         </div>
@@ -104,7 +101,7 @@
                         <div class="input_instituicao">
                             <label for="inputSenhaInstituicao">Senha</label>
                             <div class="input_dados_instituicao">
-                                <input id="inputSenhaInstituicao" name="inputSenhaInstituicao" type="password" placeholder="Senha" maxlength="255"/>
+                                <input id="inputSenhaInstituicao" name="inputSenhaInstituicao" type="password" placeholder="Senha"/>
                                 <p><small>Error mesage</small></p>
                             </div>
                         </div>
@@ -139,23 +136,23 @@
 
                         <div class="infos_cartao_inputs">
                             <div class="input_cartao_instituicao">
-                                <input id="inputNumeroCartao" name="inputNumeroCartao" type="text" placeholder="Número do cartão" minlength="9" maxlength="19" onkeypress="isInputNumber(event)"/>
+                                <input id="inputNumeroCartao" name="inputNumeroCartao" type="number" placeholder="Número do cartão" />
                                 <p><small>Error mesage</small></p>
                             </div>
 
                             <div class="input_cartao_instituicao">
-                                <input id="inputNomeCartao" name="inputNomeCartao" type="text" placeholder="Nome no cartão" maxlength="45"/>
+                                <input id="inputNomeCartao" name="inputNomeCartao" type="text" placeholder="Nome no cartão"/>
                                 <p><small>Error mesage</small></p>
                             </div>
 
                             <div class="inputs_cartao">
                                 <div class="input_cartao_instituicao">
-                                    <input id="inputDataValidadeCartao" name="inputDataValidadeCartao" type="text" placeholder="Data de validade (mm/aa)" />
+                                    <input id="inputDataValidadeCartao" name="inputDataValidadeCartao" type="text" placeholder="Data de validade (mm/aaaa)" />
                                     <p><small>Error mesage</small></p>
                                 </div>
                                 
                                 <div class="input_cartao_instituicao">
-                                    <input id="inputCvvCartao" name="inputCvvCartao" type="text" placeholder="Código de segurança" minlength="3" maxlength="4" onkeypress="isInputNumber(event)"/>
+                                    <input id="inputCvvCartao" name="inputCvvCartao" type="number" placeholder="Código de segurança"/>
                                     <p><small>Error mesage</small></p>
                                 </div>
                             </div>
@@ -163,16 +160,7 @@
                         </div>
 
 
-                        <div class="infos_cartao_svg">
-                            <div id="cartao">
-                                <select id="cartao_tipo">
-                                    <option class="cartao_tipo_option" value="credit">Crédito</option>
-                                    <option class="cartao_tipo_option" value="debit">Débito</option>
-                                </select>
-                                <input type="text" id="cartao_numero" placeholder=".... .... .... ...." disabled>
-                                <input type="text" id="cartao_nome" placeholder="Nome Completo" disabled>
-                            </div>
-                        </div>
+                        <div class="infos_cartao_svg"><img src="img/cartao.svg" alt="cartao"></div>
 
                     </div>
 
