--- a/home/login/esqueceu_a_senha.html
+++ b/home/login/esqueceu_a_senha.html
@@ -22,10 +22,7 @@
             <a href="#">
                 <img src="../images-global/logo-branca.svg" alt="logo" />
             </a>
-            <nav class="navegacao">
-                <input type="checkbox" class="toggle-menu">
-                <div class="hamburguer"></div>
-
+            <nav>
                 <ul class="nav_links">
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Produto</a></li>
